--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -1,101 +1,75 @@
----
 bootstrap:
-  # This is a template bootstrap CLI file that will need to be completed. For a more complete example look at 
-  # https://github.com/cognitedata/inso-bootstrap-cli/blob/main/configs/config-deploy-example-v2.yml
 
-    features:
-    # v2 adding as features, available as cli paramaters only atm (v1)
-    # allowed values are parsed case-insensitive: [true|yes|YES|..] or [false|no|NO|..]
-    # not as strings in quotes "yes" or 'yes'
+  features:
+    with-special-groups: false
+    with-raw-capability: true
+    aggregated-level-name: all
+    group-prefix: cdf
+    dataset-suffix: ds
+    rawdb-suffix: db
+    rawdb-additional-variants:
+      - state
 
-    # default and recommended is: false
-    #   in CDF 2022 support for this special-groups is not necessary anymore
-    #   check 'bootstrap-cli deploy --help' for more info
-        with-special-groups: false
+  idp-cdf-mappings:
+    # Support multiple CDF Projects, like dev/test/prod in one config.
+    - cdf-project: cdf-bootcamp-07-test
+      mappings:
+        - cdf-group: cdf:root
+          idp-source-id: 72f16f5e-2fe0-4453-9349-88c76026c1aa
+          idp-source-name: bootcamp-07-test-admin
+        - cdf-group: cdf:all:owner
+          idp-source-id: ac98b17d-e056-4496-b36d-a55fc3bb0dfb
+          idp-source-name: bootcamp-07-test-all-owner
+        - cdf-group: cdf:all:read
+          idp-source-id: 82aab306-a6a8-4abe-9108-76628e228e02
+          idp-source-name: bootcamp-07-test-all-read
 
-    # default and recommended is: true
-        with-raw-capability: true
+    - cdf-project: cdf-bootcamp-<n>-prod
+      mappings:
+        - cdf-group: cdf:root
+          idp-source-id: dd0fa706-44ed-4975-98d2-9184d2b2171f
+          idp-source-name: bootcamp-<n>-prod-admin
+        - cdf-group: cdf:all:owner
+          idp-source-id: 1fd17b9b-1e98-4b10-aab0-6b48abafb91d
+          idp-source-name: bootcamp-<n>-prod-all-owner
+        - cdf-group: cdf:all:read
+          idp-source-id: f5a3b668-2839-4930-a34d-e84d7462ec89
+          idp-source-name: bootcamp-<n>-prod-all-read
 
-    # new in v2 to configure prior (v1) hard-coded naming elements
-    # Most of the naming-configurations don't have a functional effect, but affect
-    # naming of Groups, Datasets and RAWDBs only.
-    # All given feature values are reflecting the default values,
-    # to support a smooth v1 migration.
-    #
-    # Recommended values for a new v2-project are given as comments!
+  namespaces:
+    # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+    - ns-name: src
+      description: Sources used for data extraction
+      # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+      ns-nodes:
+        - node-name: src:001:sap
+          description: Source 01 data from SAP
+        - node-name: src:002:opcua
+          description: Source 02 data from opcua
+    # Typical config will have separate namespace by data source ("src") and use cases ("uc")
+    - ns-name: uc
+      description: Use cases representing the data/products
 
-
-    # default is: allprojects
-    #   recommended is shorter: 'all'
-        aggregated-level-name: all
-
-    # default and recommended is: cdf
-    #   supports empty-string ''
-        group-prefix: cdf
-
-    # default is: dataset
-    #  recommended is shorter 'ds' or minimal ''
-    #   supports empty-string ''
-        dataset-suffix: ds
-
-    # default is: rawdb
-    #  recommended is shorter 'db' or minimal ''
-        rawdb-suffix: db
-
-    # default is" ['state']
-    #   meant for separating the statestores from extractors from ingested data
-    #   recommended: keep it or []
-    #   more rawdbs can be configured at a later stage
-    #   supports empty list [] for no additional variants
-        rawdb-additional-variants:
-      # provide more than one rawdb per ns-nodes
-      # atm (v1) hardcoded is one additional rawdb
-            - state
-
-    # Mapping between IDP (Azure Active Directory) groups and CDF groups.
-    idp-cdf-mappings:
-    # Support multiple CDF Projects, like dev/test/prod in one config. 
-        - cdf-project: [CDF project name - test]
-          mappings:
-              - cdf-group: cdf:all:owner
-                idp-source-id: [Azure AD group id]
-                idp-source-name: [Azure AD group name]
-              - cdf-group: cdf:all:read
-                idp-source-id: [Azure AD group id]
-                idp-source-name: [Azure AD group name]
-
-
-    namespaces:
-        # Typical config will have separate namespace by data source ("src") and use cases ("uc")
-        - ns-name: [Namespace name]
-          description: [Description]
-
-          # Node names will normally follow src:001:srcname or uc:001:usecasename naming convention
-          ns-nodes:
-              - node-name: [Node name]
-                description: [Node description]
-
-
-# de-facto standards for CDF CogniteClient and logger configuration.
-# Following the same parameter structure as the 'Cognite Python Extractor-Utilities'
-# and 'Cognite DB Extractor' configuration.
-cognite: # kwargs to pass to the CogniteClient, Environment variable format: ${ENVIRONMENT_VARIABLE_NAME}
-    # host: https://${BOOTSTRAP_CDF_CLUSTER}.cognitedata.com/
-    host: ${BOOTSTRAP_CDF_HOST}
-    project: ${BOOTSTRAP_CDF_PROJECT}
-    #
-    # AAD IdP login credentials:
-    #
-    idp-authentication:
-        client-id: ${BOOTSTRAP_IDP_CLIENT_ID}
-        secret: ${BOOTSTRAP_IDP_CLIENT_SECRET}
-        scopes:
-            - ${BOOTSTRAP_IDP_SCOPES}
-        token_url: ${BOOTSTRAP_IDP_TOKEN_URL}
-
+      # Description names will normally follow src:001:srcname or uc:001:usecasename naming convention
+      ns-nodes:
+        - node-name: uc:001:oee
+          description: Use case 001 Over all Equipment effectiveness
+          shared-access:
+            read:
+              - node-name: src:001:sap
+              - node-name: src:002:opcua
+cognite:
+  host: ${BOOTSTRAP_CDF_HOST}
+  project: ${BOOTSTRAP_CDF_PROJECT}
+  idp-authentication:
+    client-id: ${BOOTSTRAP_IDP_CLIENT_ID}
+    secret: ${BOOTSTRAP_IDP_CLIENT_SECRET}
+    scopes:
+      - ${BOOTSTRAP_IDP_SCOPES}
+    token_url: ${BOOTSTRAP_IDP_TOKEN_URL}
 logger:
-    file:
-        path: ./logs/bootstrap-cli-logs.log
-        level: INFO
-    console:
-        level: INFO
+  file:
+    path: ./logs/bootstrap-cli-logs.log
+    level: INFO
+  console:
+    level: INFO
