--- a/config/transformations/ts_assets_mapping/manifest.yaml
+++ b/config/transformations/ts_assets_mapping/manifest.yaml
@@ -40,7 +40,7 @@ dataSetExternalId: uc:001:oee:ds
 #   cdfProjectName: ${CDF_PROJECT_NAME}
 #   scopes: 
 #    - ${SCOPES}
-#   # Optional: If idP requires providing the audience, test
+#   # Optional: If idP requires providing the audience, test2
 #   audience: ${AUDIENCE}
 authentication:
     clientId: ${COGNITE_CLIENT_ID}
