--- a/config/transformations/create_asset_hierarchy/manifest.yaml
+++ b/config/transformations/create_asset_hierarchy/manifest.yaml
@@ -1,15 +1,14 @@
 # Manifest file downloaded from fusion
-externalId: tr-ts_assets_mapping
-name: ts_assets_mapping_ui
+externalId: tr-create_asset_hierarchy
+name: create_asset_hierarchy_ui
 query:
     file: transformation.sql
-
 destination:
-  type: timeseries
+  type: asset_hierarchy
 ignoreNullFields: true
 shared: true
-action: update
-dataSetExternalId: uc:001:oee:ds
+action: upsert
+dataSetExternalId: src:001:sap:ds
 # Specify credentials separately like this:
 # authentication:
 #   read:
