--- a/config/transformations/ts_assets_mapping/manifest.yaml
+++ b/config/transformations/ts_assets_mapping/manifest.yaml
@@ -1,6 +1,6 @@
 # Manifest file downloaded from fusion
 externalId: tr-ts_assets_mapping
-name: ts_assets_mapping_ui
+name: ts_assets_mapping
 query:
     file: transformation.sql
 destination:
@@ -40,7 +40,7 @@ dataSetExternalId: uc:001:oee:ds
 #   cdfProjectName: ${CDF_PROJECT_NAME}
 #   scopes: 
 #    - ${SCOPES}
-#   # Optional: If idP requires providing the audience, test2
+#   # Optional: If idP requires providing the audience
 #   audience: ${AUDIENCE}
 authentication:
     clientId: ${COGNITE_CLIENT_ID}
